add oom example